--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-25T02:36:50.678Z",
-        "lastAccessed": "2025-06-25T02:36:50.681Z"
+        "creation": "2025-06-25T22:51:26.585Z",
+        "lastAccessed": "2025-06-25T22:51:26.585Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-25T02:36:50.681Z",
-        "lastAccessed": "2025-06-25T02:36:50.681Z"
+        "creation": "2025-06-25T22:51:26.585Z",
+        "lastAccessed": "2025-06-25T22:51:26.585Z"
     },
     {
         "key": "ps_l",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-25T02:36:50.681Z",
-        "lastAccessed": "2025-06-25T02:36:50.681Z"
+        "creation": "2025-06-25T22:51:26.585Z",
+        "lastAccessed": "2025-06-25T22:51:26.585Z"
     },
     {
         "key": "ps_n",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-25T02:36:50.681Z",
-        "lastAccessed": "2025-06-25T02:36:50.681Z"
+        "creation": "2025-06-25T22:51:26.585Z",
+        "lastAccessed": "2025-06-25T22:51:26.585Z"
     },
     {
         "key": "c_user",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-25T02:36:50.681Z",
-        "lastAccessed": "2025-06-25T02:36:50.681Z"
+        "creation": "2025-06-25T22:51:26.585Z",
+        "lastAccessed": "2025-06-25T22:51:26.585Z"
     },
     {
         "key": "xs",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-25T02:36:50.681Z",
-        "lastAccessed": "2025-06-25T02:36:50.681Z"
+        "creation": "2025-06-25T22:51:26.585Z",
+        "lastAccessed": "2025-06-25T22:51:26.585Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-25T02:36:50.681Z",
-        "lastAccessed": "2025-06-25T02:36:50.681Z"
+        "creation": "2025-06-25T22:51:26.585Z",
+        "lastAccessed": "2025-06-25T22:51:26.585Z"
     },
     {
         "key": "vpd",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-25T02:36:50.681Z",
-        "lastAccessed": "2025-06-25T02:36:50.681Z"
+        "creation": "2025-06-25T22:51:26.585Z",
+        "lastAccessed": "2025-06-25T22:51:26.585Z"
     },
     {
         "key": "pas",
@@ -77,34 +77,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-25T02:36:50.681Z",
-        "lastAccessed": "2025-06-25T02:36:50.681Z"
+        "creation": "2025-06-25T22:51:26.585Z",
+        "lastAccessed": "2025-06-25T22:51:26.585Z"
     },
     {
         "key": "fr",
-        "value": "004GkqsD89PutAdd0.AWeOKTSgl8xGqFNFLwQvTyvIJuQz-9JLFc8gW_JN-T2S6_o_z7g.BoRR8O..AAA.0.0.BoW1Fl.AWdY6VClT0ww4DYDVDzZjI9mRtU",
+        "value": "004GkqsD89PutAdd0.AWfruZ4RZm6X18_QAgmfDWP4unCbzOHOdsn9bZtfbkSppM9eCpo.BoRR8O..AAA.0.0.BoXHyR.AWdf72YVy6nrnW0000iV4i3bE34",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-25T02:36:50.681Z",
-        "lastAccessed": "2025-06-25T02:36:50.681Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2852%3Btimestamp%3A1750815077",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-25T02:36:50.681Z",
-        "lastAccessed": "2025-06-25T02:36:50.681Z"
+        "creation": "2025-06-25T22:51:26.586Z",
+        "lastAccessed": "2025-06-25T22:51:26.586Z"
     },
     {
         "key": "fbl_st",
-        "value": "101437305%3BT%3A29180314",
+        "value": "100622825%3BT%3A29181527",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-25T02:36:50.681Z",
-        "lastAccessed": "2025-06-25T02:36:50.681Z"
+        "creation": "2025-06-25T22:51:26.586Z",
+        "lastAccessed": "2025-06-25T22:51:26.586Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2854%3Btimestamp%3A1750891665",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-25T22:51:26.586Z",
+        "lastAccessed": "2025-06-25T22:51:26.586Z"
     }
 ]
