--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-27T14:33:54.680Z",
-        "lastAccessed": "2025-06-27T14:33:54.681Z"
+        "creation": "2025-06-27T14:45:20.801Z",
+        "lastAccessed": "2025-06-27T14:45:20.802Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-27T14:33:54.681Z",
-        "lastAccessed": "2025-06-27T14:33:54.681Z"
+        "creation": "2025-06-27T14:45:20.802Z",
+        "lastAccessed": "2025-06-27T14:45:20.802Z"
     },
     {
         "key": "ps_l",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-27T14:33:54.681Z",
-        "lastAccessed": "2025-06-27T14:33:54.681Z"
+        "creation": "2025-06-27T14:45:20.802Z",
+        "lastAccessed": "2025-06-27T14:45:20.802Z"
     },
     {
         "key": "ps_n",
@@ -32,26 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-27T14:33:54.681Z",
-        "lastAccessed": "2025-06-27T14:33:54.681Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61554089225155",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-27T14:33:54.681Z",
-        "lastAccessed": "2025-06-27T14:33:54.681Z"
-    },
-    {
-        "key": "xs",
-        "value": "44%3A8sCL0cifAYA93A%3A2%3A1749523221%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-27T14:33:54.681Z",
-        "lastAccessed": "2025-06-27T14:33:54.681Z"
+        "creation": "2025-06-27T14:45:20.802Z",
+        "lastAccessed": "2025-06-27T14:45:20.802Z"
     },
     {
         "key": "locale",
@@ -59,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-27T14:33:54.681Z",
-        "lastAccessed": "2025-06-27T14:33:54.681Z"
+        "creation": "2025-06-27T14:45:20.802Z",
+        "lastAccessed": "2025-06-27T14:45:20.802Z"
     },
     {
         "key": "vpd",
@@ -68,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-27T14:33:54.681Z",
-        "lastAccessed": "2025-06-27T14:33:54.681Z"
+        "creation": "2025-06-27T14:45:20.802Z",
+        "lastAccessed": "2025-06-27T14:45:20.802Z"
     },
     {
         "key": "pas",
@@ -77,34 +59,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-27T14:33:54.681Z",
-        "lastAccessed": "2025-06-27T14:33:54.681Z"
+        "creation": "2025-06-27T14:45:20.802Z",
+        "lastAccessed": "2025-06-27T14:45:20.802Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61554089225155",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-27T14:45:20.802Z",
+        "lastAccessed": "2025-06-27T14:45:20.802Z"
+    },
+    {
+        "key": "xs",
+        "value": "41%3AJf63sUx1UICVtg%3A2%3A1751035387%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-27T14:45:20.802Z",
+        "lastAccessed": "2025-06-27T14:45:20.802Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "1.875",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-27T14:45:20.802Z",
+        "lastAccessed": "2025-06-27T14:45:20.802Z"
+    },
+    {
+        "key": "wd",
+        "value": "385x860",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-27T14:45:20.802Z",
+        "lastAccessed": "2025-06-27T14:45:20.802Z"
     },
     {
         "key": "fr",
-        "value": "004GkqsD89PutAdd0.AWe2gTykajNFinCzYadRXiIWB3me3YxPomHibWp1X5zohFdfciE.BoRR8O..AAA.0.0.BoXiJ-.AWcM4uwznaCxrDrEBngzUT19tuo",
+        "value": "0TNa2tZUT8ZSGPbWy.AWdlrrwjMKFxe_5kFLtO8J75_okN5Fd1eUCa_XBPqeVecsEu_io.BoXq4X..AAA.0.0.BoXq4X.AWf4Bwh7gmiEPqGMk48mTDOf7DM",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-27T14:33:54.681Z",
-        "lastAccessed": "2025-06-27T14:33:54.681Z"
+        "creation": "2025-06-27T14:45:20.802Z",
+        "lastAccessed": "2025-06-27T14:45:20.802Z"
     },
     {
         "key": "fbl_st",
-        "value": "101228805%3BT%3A29183328",
+        "value": "100428548%3BT%3A29183923",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-27T14:33:54.681Z",
-        "lastAccessed": "2025-06-27T14:33:54.681Z"
+        "creation": "2025-06-27T14:45:20.802Z",
+        "lastAccessed": "2025-06-27T14:45:20.802Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2855%3Btimestamp%3A1750999678",
+        "value": "v2%3Bclient_version%3A2855%3Btimestamp%3A1751035415",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-27T14:33:54.681Z",
-        "lastAccessed": "2025-06-27T14:33:54.681Z"
+        "creation": "2025-06-27T14:45:20.802Z",
+        "lastAccessed": "2025-06-27T14:45:20.802Z"
     }
 ]
