--- a/config.json
+++ b/config.json
@@ -16,11 +16,11 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "Admin Bot",
+    "BOTNAME": "𝐂𝐘𝐁𝐄𝐑 ☢️_𖣘 -𝐁𝐎𝐓 ⚠️",
     "PREFIX": "/",
     "ADMINBOT": [
-        "61554089225155",
-        "61577733875660",
+        "100000478146113",
+        "61576520552554",
         "61550035211214"
     ],
     "NDH": [
