--- a/appstate.json
+++ b/appstate.json
@@ -1,110 +1,7 @@
-[
-    {
-        "key": "datr",
-        "value": "Dh9FaDf9OA1YlZnAGLdnlWn9",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-30T05:47:19.790Z",
-        "lastAccessed": "2025-06-30T05:47:19.790Z"
-    },
-    {
-        "key": "sb",
-        "value": "Dh9FaHNZRwKfDPU1pE1smpyb",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-30T05:47:19.790Z",
-        "lastAccessed": "2025-06-30T05:47:19.790Z"
-    },
-    {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-30T05:47:19.790Z",
-        "lastAccessed": "2025-06-30T05:47:19.790Z"
-    },
-    {
-        "key": "ps_n",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-30T05:47:19.790Z",
-        "lastAccessed": "2025-06-30T05:47:19.790Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-30T05:47:19.790Z",
-        "lastAccessed": "2025-06-30T05:47:19.790Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B730x384x1.875",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-30T05:47:19.790Z",
-        "lastAccessed": "2025-06-30T05:47:19.790Z"
-    },
-    {
-        "key": "pas",
-        "value": "61554089225155%3AM3XRl3DzEp",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-30T05:47:19.790Z",
-        "lastAccessed": "2025-06-30T05:47:19.790Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61554089225155",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-30T05:47:19.790Z",
-        "lastAccessed": "2025-06-30T05:47:19.790Z"
-    },
-    {
-        "key": "xs",
-        "value": "41%3AJf63sUx1UICVtg%3A2%3A1751035387%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-30T05:47:19.790Z",
-        "lastAccessed": "2025-06-30T05:47:19.790Z"
-    },
-    {
-        "key": "fr",
-        "value": "0TNa2tZUT8ZSGPbWy.AWdlrrwjMKFxe_5kFLtO8J75_okN5Fd1eUCa_XBPqeVecsEu_io.BoXq4X..AAA.0.0.BoXq4X.AWf4Bwh7gmiEPqGMk48mTDOf7DM",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-30T05:47:19.790Z",
-        "lastAccessed": "2025-06-30T05:47:19.790Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "100728053%3BT%3A29187704",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-30T05:47:19.790Z",
-        "lastAccessed": "2025-06-30T05:47:19.790Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2856%3Btimestamp%3A1751262276",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-30T05:47:19.790Z",
-        "lastAccessed": "2025-06-30T05:47:19.790Z"
-    }
-]
+....
+
+
+        𝐚dd 𝐲𝐨𝐮𝐫 𝐜𝟑𝐜 𝐅𝐛𝐬𝐭𝐚𝐭𝐞 𝐜𝐨𝐨𝐤𝐢𝐞 🍪
+
+
+.....
